adding history list

--- a/index.html
+++ b/index.html
@@ -19,13 +19,25 @@
         </div>  
     </nav>
 
-    <section>
+    <section class="main-rgb">
         <button class="btn">Click aquí para generar un color random</button>
         <div class="cuadro"></div>
         <button class="color-btn"></button>
     </section>
 
-    <footer class="footer">Creado por Luciano Giusti</footer>
+    <section class="records">
+        <div class="history">
+            <ul id="lista-historial">
+
+            </ul>
+        </div>
+        <div class="favorites">
+
+        </div>
+    </section>
+
+
+   <!--  <footer class="footer">Creado por Luciano Giusti</footer> -->
 <script src="script.js"></script>
 </body>
 </html>
