max li items added

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 
     <section class="records">
         <div class="history">
+            <h2>Historial de tus ultimos 5 colores:</h2>
             <ul id="lista-historial">
 
             </ul>
