fav picks added

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <button class="btn">Click aquí para generar un color random</button>
         <div class="cuadro"></div>
         <button class="color-btn"></button>
+        <button id="add-fav">Agregar a favoritos</button>
     </section>
 
     <section class="records">
@@ -33,7 +34,10 @@
             </ul>
         </div>
         <div class="favorites">
+            <h2>Tus colores favoritos:</h2>
+            <ul id="favoritos">
 
+            </ul>
         </div>
     </section>
 
